--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-	  <a class="navbar-brand" href="#">Curitiba</a>
+	  <a class="navbar-brand" href="#">Rio Grande do Sul</a>
 	  </div>
    <div class="collapse navbar-collapse" id="menu">
 <ul class="nav navbar-nav" >
@@ -34,35 +34,34 @@
 <div id="sobre-nos" class="container">
 <h1> Sobre nós</h1>
 <img class="img-responsive" src="./img/sobreNos.jpg"/>
-<h4> Photo by Gabriel Rodrigues on Unsplash</h4>
+<h4> Photo by Gabriel Rodrigues on Unsplash, and edited by Rodrigo Dresch</h4>
 
 <div class="panel-group"id="painel-sobre">
 <div class="panel panel-default">
 <div class="panel-heading" data-parent="#painel-sobre" data-toggle="collapse" data-target="#p1">
-<h3 class="panel-title"  > Desde 1693</h3>
+<h3 class="panel-title"  > Desde 1890</h3>
 </div>
 
 <div id="p1"class="collapse">
-<p class="panel-body" > Curitiba é a capital do Paraná, um dos três Estados que compõem a Região Sul do Brasil. Sua fundação oficial data de 29 de março de 1693 </p>
+<p class="panel-body" > Rio Grande do Sul é o estado mais a sul do Brasil e faz fronteira com a Argentina e o Uruguai. A nordeste, a montanhosa Serra Gaúcha alberga a região vinícola do Vale dos Vinhedos e inclui cidades turísticas de estilo alemão como Gramado e Canela, famosas pelas paisagens naturais pitorescas.</p>
 </div>
 </div>
 
 <div class="panel panel-default">
 <div class="panel-heading" data-parent="#painel-sobre" data-toggle="collapse" data-target="#p2">
-<h3 class="panel-title" > Terra do pinhão</h3>
+<h3 class="panel-title" > Terra do Tererê</h3>
 </div>
 
 <div id="p2"class="collapse">
-<p  class="panel-body"> Curitiba é uma palavra de origem Guarani: kur yt yba quer dizer "grande quantidade de pinheiros, pinheiral"</p>
+<p  class="panel-body"> O nome do estado do Rio Grande do Sul deriva de um erro cartográfico e de um vilarejo que marcou a área da foz do rio Grande.</p>
 </div>
 </div>
 <div class="panel panel-default">
 <div class="panel-heading" data-parent="#painel-sobre" data-toggle="collapse" data-target="#p3">
-<h3 class="panel-title"> O inverno em Curitiba</h3>
+<h3 class="panel-title"> O inverno no RS</h3>
 </div>
 <div id="p3"class="collapse">
-<p class="panel-body"> A temperatura média da cidade no inverno é de 13 °C, podendo chegar a números negativos nos dias mais frios, de madrugada e de manhã. 
-Os meses de julho e agosto são os mais frios do ano, mas também os menos chuvosos. As manhãs de inverno costumam vir acompanhadas de uma neblina matinal <br>
+<p class="panel-body"> A temperatura média anual no Rio Grande do Sul varia entre 14°C e 22°C. O clima é subtropical úmido, com verões quentes e invernos amenos. <br>
 fonte: ricmais.com.br
 </p>
 </div>
