--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         
         <h3>Alguns de meus projetos:</h3>
         <ul>
-            <li><a href="pratica-1.html" target="_blank">Prática 1 - HTML básico</a></li>
-            <li><a href="na-pratica-css-1.html" target="_blank">Prática CSS 1</a></li>
-            <li><a href="na-pratica-css-3.html" target="_blank">Prática CSS 3</a></li>
-            <li><a href="na-pratica-js-1.html" target="_blank">Prática JS 1</a></li>
-            <li><a href="na-pratica-js-3.html" target="_blank">Prática JS 3</a></li>
-            <li><a href="teste-java.html" target="_blank">Teste Java</a></li>
+            <li><a href="pratica1.html" target="_blank">Prática 1 - HTML básico</a></li>
+            <li><a href="na-praticacss1.html" target="_blank">Prática CSS 1</a></li>
+            <li><a href="na-praticacss3.html" target="_blank">Prática CSS 3</a></li>
+            <li><a href="na-praticajs1.html" target="_blank">Prática JS 1</a></li>
+            <li><a href="na-praticajs3.html" target="_blank">Prática JS 3</a></li>
+            <li><a href="testejava.html" target="_blank">Teste Java</a></li>
         </ul>
 
         <p>Em projetos mais complexos, tive a experiência na criação de sistemas de console em Python. Dentre eles, criei uma calculadora de juros, um simulador de pedidos para um restaurante com um cardápio próprio, e um sistema para uma distribuidora de roupas que calcula frete e juros direto no console. Também desenvolvi um software de gerenciamento de funcionários que oferece funcionalidades, como cadastro, consulta, remoção e a opção de retornar ao menu ou encerrar o programa.</p>
@@ -87,3 +87,4 @@
 
 </body>
 </html>
+
