--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <h3>Alguns de meus projetos:</h3>
         <ul>
             <li><a href="pratica1.html" target="_blank">Prática 1 - HTML básico</a></li>
-            <li><a href="na-praticacss1.html" target="_blank">Prática CSS 1</a></li>
-            <li><a href="na-praticacss3.html" target="_blank">Prática CSS 3</a></li>
-            <li><a href="na-praticajs1.html" target="_blank">Prática JS 1</a></li>
-            <li><a href="na-praticajs3.html" target="_blank">Prática JS 3</a></li>
+            <li><a href="napraticacss1.html" target="_blank">Prática CSS 1</a></li>
+            <li><a href="napraticacss3.html" target="_blank">Prática CSS 3</a></li>
+            <li><a href="napraticajs1.html" target="_blank">Prática JS 1</a></li>
+            <li><a href="napraticajs3.html" target="_blank">Prática JS 3</a></li>
             <li><a href="testejava.html" target="_blank">Teste Java</a></li>
         </ul>
 
@@ -87,4 +87,5 @@
 
 </body>
 </html>
+
 
