--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <section id="portfolio">
         <h2>Portfólio</h2>
-        <p>Falando um pouco sobre os códigos que já desenvolvi, todos eles sendo durante as aulas das disciplinas da minha faculdade de Engenharia de Software. Fiz apenas o básico, brincando e fazendo mudanças nos códigos. Meus projetos iniciais focaram em fundamentos web, onde desenvolvi um simulador de pedidos de açaí, pratiquei o uso de CSS para design, margens e cores na tela e criei botões interativos com JavaScript que alteram cor e texto ao serem clicados.</p>
+        <p>Falando um pouco sobre os códigos que já desenvolvi, todos eles sendo durante as aulas das disciplinas da minha faculdade de Engenharia de Software. Fiz apenas o básico, brincando e fazendo mudanças nos códigos. Meus projetos iniciais focaram em fundamentos web, onde desenvolvi um simulador de pedidos de açaí, pratiquei o uso de CSS para design, margens e cores na tela e com JavaScript criei botões interativos que alteram cor e texto ao serem clicados e também uma calculadora.</p>
         
         <h3>Alguns de meus projetos:</h3>
         <ul>
@@ -86,4 +86,5 @@
     </script>
 
 </body>
+
 </html>
